<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Pilih kategori"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFashion"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/fashion_mini"
        android:text="@string/fashion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/tvElektronik"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/electronic_mini"
        android:text="@string/elektronik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFashion" />

    <TextView
        android:id="@+id/tvOtomotif"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/automotive_mini"
        android:text="@string/otomotif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvElektronik" />

    <TextView
        android:id="@+id/tvKecantikan"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/beauty_mini"
        android:text="@string/kecantikan_kesehatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtomotif" />

    <TextView
        android:id="@+id/tvAksesoris"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/accesories_mini"
        android:text="@string/aksesoris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKecantikan" />

    <TextView
        android:id="@+id/tvPeralatan"
        style="@style/ItemCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/house_mini"
        android:text="@string/peralatan_rumah_tangga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAksesoris" />


</android.support.constraint.ConstraintLayout>